--- a/index.html
+++ b/index.html
@@ -45,13 +45,18 @@
 
         <ul class="header-contacts list">
           <li class="header-contacts-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contacts-link link" href="mailto:info@devstudio.com">
+              <svg class="icon-contact" width="16" height="12"> 
+                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="header-contacts-item">
-            <a class="contacts-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contacts-link link" href="tel:+380961111111">
+              <svg class="icon-contact" width="10" height="16"> 
+                <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -77,13 +82,16 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages-item">
+              <svg class="advantage-icon"width="70" height="70"><use href="./images/icons/symbol-defs.svg#icon-antenna"></use></svg>
               <h3 class="advantages-item-title">Внимание к деталям</h3>
               <p class="advantages-item-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
+            
             <li class="advantages-item">
+              <svg class="advantage-icon"width="70" height="70"><use href="./images/icons/symbol-defs.svg#icon-clock"></use></svg>
               <h3 class="advantages-item-title">Пунктуальность</h3>
               <p class="advantages-item-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -91,6 +99,7 @@
               </p>
             </li>
             <li class="advantages-item">
+              <svg class="advantage-icon"width="70" height="70"><use href="./images/icons/symbol-defs.svg#icon-diagram"></use></svg>
               <h3 class="advantages-item-title">Планирование</h3>
               <p class="advantages-item-text">
                 Равным образом консультация с широким активом в значительной
@@ -98,6 +107,7 @@
               </p>
             </li>
             <li class="advantages-item">
+              <svg class="advantage-icon"width="70" height="70"><use href="./images/icons/symbol-defs.svg#icon-astronaut"></use></svg>
               <h3 class="advantages-item-title">Современные технологии</h3>
               <p class="advantages-item-text">
                 Значимость этих проблем настолько очевидна, что реализация
