--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,10 @@
         <nav class="header-nav">
           <ul class="nav-list list">
             <li class="nav-item">
-              <a href="index.html" class="header-link link">Студия</a>
+              <a href="index.html" class="header-link current link">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="portfolio.html" class="header-link current link"
-                >Портфолио</a
-              >
+              <a href="portfolio.html" class="header-link link">Портфолио</a>
             </li>
             <li class="nav-item">
               <a href="" class="header-link link">Контакты</a>
@@ -47,12 +45,19 @@
 
         <ul class="header-contacts list">
           <li class="header-contacts-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contacts-link link" href="mailto:info@devstudio.com">
+              <svg class="icon-contact" width="16" height="12">
+                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="header-contacts-item">
-            <a class="contacts-link link" href="tel:+380961111111"
+            <a class="contacts-link link" href="tel:+380961111111">
+              <svg class="icon-contact" width="10" height="16">
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-smartphone"
+                ></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -225,28 +230,65 @@
     <!-- *Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo link"
-          >Web<span class="logo-accent">Studio</span></a
-        >
-        <address class="footer-addess">
-          <ul class="foter-contacts list">
-            <li class="footer-contacts-item">
-              <a class="map-link link" href=""
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-contacts-item">
-              <a href="mailto:info@example.com" class="contacts-link link"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-contacts-item">
-              <a href="tel:+380991111111" class="contacts-link link"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="footer-info">
+          <div class="footer-address-block">
+            <a href="index.html" class="logo link"
+              >Web<span class="logo-accent">Studio</span></a
+            >
+            <address class="footer-addess">
+              <ul class="foter-contacts list">
+                <li class="footer-contacts-item">
+                  <a class="map-link link" href=""
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="footer-contacts-item">
+                  <a href="mailto:info@example.com" class="contacts-link link"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="footer-contacts-item">
+                  <a href="tel:+380991111111" class="contacts-link link"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-social-block">
+            <p class="footer-social-title">Присоединяйтесь</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link link">
+                  <svg class="footer-social-icon">
+                    <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link link">
+                  <svg class="footer-social-icon">
+                    <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link link">
+                  <svg class="footer-social-icon">
+                    <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link link">
+                  <svg class="footer-social-icon">
+                    <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- *Footer -->
