--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
               <svg class="icon-contact" width="10" height="16">
                 <use
                   href="./images/icons/symbol-defs.svg#icon-smartphone"
-                ></use></svg
-              >+38 096 111 11 11</a
+                ></use></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
