fig hero bg and card-portpholio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,10 @@
         <nav class="header-nav">
           <ul class="nav-list list">
             <li class="nav-item">
-              <a href="index.html" class="header-link current link">Студия</a>
+              <a href="index.html" class="header-link link">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="portfolio.html" class="header-link link">Портфолио</a>
+              <a href="portfolio.html" class="header-link current link">Портфолио</a>
             </li>
             <li class="nav-item">
               <a href="" class="header-link link">Контакты</a>
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href=""
+              <a class="product-list-link link" href=""
                 ><img
                   src="./images/portfolio/portfolio-img2.jpg"
                   width="370"
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href="">
+              <a class="product-list-link link" href="">
                 <img
                   src="./images/portfolio/portfolio-img3.jpg"
                   width="370"
@@ -140,7 +140,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href=""
+              <a class="product-list-link link" href=""
                 ><img
                   src="./images/portfolio/portfolio-img4.jpg"
                   width="370"
@@ -154,7 +154,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href="">
+              <a class="product-list-link link" href="">
                 <img
                   src="./images/portfolio/portfolio-img5.jpg"
                   width="370"
@@ -168,7 +168,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href="">
+              <a class="product-list-link link" href="">
                 <img
                   src="./images/portfolio/portfolio-img6.jpg"
                   width="370"
@@ -182,7 +182,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href="">
+              <a class="product-list-link link" href="">
                 <img
                   src="./images/portfolio/portfolio-img7.jpg"
                   width="370"
@@ -196,7 +196,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href="">
+              <a class="product-list-link link" href="">
                 <img
                   src="./images/portfolio/portfolio-img8.jpg"
                   width="370"
@@ -210,7 +210,7 @@
               </a>
             </li>
             <li class="product-list-item">
-              <a class="link" href="">
+              <a class="product-list-link link" href="">
                 <img
                   src="./images/portfolio/portfolio-img9.jpg"
                   width="370"
